# tldl

./: .gitignore  CHANGELOG.md  LICENSE  README.md  download_podcast.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: release.yml
src/: app.py  download_podcast.py  prompt_templates.py  summarizer.py  tts_modules.py  youtube_downloader.py
src/tldl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
